update libs to fix blurryness issues

--- a/style.scss
+++ b/style.scss
@@ -17,13 +17,21 @@ body {
     width: 100%;
 }
 
+#content {
+    box-sizing: border-box;
+    height: 100%;
+    width: 100%;
+}
+
 #dashboard {
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
     align-items: stretch;
     height: 100%;
-    width: 100%;
+    width: auto;
+    // margin: 16px;
+    padding: 16px;
 }
 
 .gauges {
@@ -31,6 +39,7 @@ body {
     flex-direction: row;
     align-items: stretch;
     flex: 1 1 1px;
+    margin-bottom: 16px;
 }
 
 #gauges {
@@ -45,16 +54,8 @@ body {
     flex: 1 1 1px;
 }
 
-#tempGauge,
-#humGauge,
-#presGauge {
-    /* height: 100px;
-    width: 100px; */
-}
+
 
 #tempPlot {
     flex: 8 1 1px;
-    overflow: hidden;
-    /* height: 400px;
-    width: 600px; */
 }
